--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,7 @@
     margin-right: 0.5rem; /* Adjust spacing as needed */
   }
   .something-else-input {
-    margin-left: 0.5rem;
-    padding: 0.2rem;
-    font-size: 1rem;
-    /* display: none; */
+    margin: 0.5rem 0.25rem;
   }
 
   label:has(input[type="checkbox"]:checked) {
